Updated backend files for login and password reset functionality

--- a/.env
+++ b/.env
@@ -1,3 +1,21 @@
 MONGO_URI=mongodb+srv://lohithgurla1939:Xcr2nJojXqmyHQd5@react-auth-app-cluster.avgi1.mongodb.net/react-auth-app?retryWrites=true&w=majority&appName=react-auth-app-cluster
+MONGO_USERNAME=lohithgurla1939
+MONGO_PASSWORD=Xcr2nJojXqmyHQd5
+
+
 JWT_SECRET=mySuperSecureSecretKey123!@#
 PORT=5000
+
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=gopichandbullayya1939@gmail.com
+
+EMAIL_PASSWORD=efwhusafzlxmckdf
+EMAIL_SECURE=false # true for SSL/TLS, false for STARTTLS
+
+# Optional: Additional environment variables (if needed)
+APP_NAME=ReactAuthApp
+NODE_ENV=development # Use 'production' for live deployment
+
+REACT_APP_BACKEND_URL=http://localhost:5000/api/auth
